--- a/package.json
+++ b/package.json
@@ -6,10 +6,13 @@
     "@testing-library/jest-dom": "^5.14.1",
     "@testing-library/react": "^13.0.0",
     "@testing-library/user-event": "^13.2.1",
+    "daisyui": "^2.46.1",
+    "moralis-v1": "^1.12.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-scripts": "5.0.1",
-    "web-vitals": "^2.1.0"
+    "web-vitals": "^2.1.0",
+    "web3uikit": "^1.0.4"
   },
   "scripts": {
     "start": "react-scripts start",
@@ -34,5 +37,9 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "install": "^0.13.0",
+    "tailwindcss": "^3.2.4"
   }
 }
